--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <html>
 	<head>
 		<title>Calculator</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+		<script src="calc.js"type="text/javascript"></script>
 		<link rel="stylesheet" href="styles.css">
-		<script src="calc.js"></script>
+		<link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+		
+
 	</head>
 	<body>
-		<div class="container">
-			<div class="row">
-				<div onclick='console.log("7")' class="btn" id="7">7</div>
-				<div onclick='console.log("8")'class="btn" id="8">8</div>
-				<div onclick='console.log("9")'class="btn" id="9">9</div>
-			</div>
-			<div class="row">
-				<div onclick='console.log("4")'class="btn"  id="4">4</div>
-				<div onclick='console.log("5")' class="btn" id="5">5</div>
-				<div  onclick='console.log("6")'class="btn" id="6">6</div>
-			</div>
-			<div class="row">
-				<div onclick='console.log("1")'class="btn"  id="1">1</div>
-				<div onclick='console.log("2")' class="btn" id="2">2</div>
-				<div onclick='console.log("3")' class="btn" id="3">3</div>
-			</div>
-			<div class="row">
-				<div onclick='console.log("0")' class="btn"  id="0">0</div>
-			</div>
-			<div class="row">
-				<div class="func" id="add">+</div>
-				<div class="func" id="sub">-</div>
-				<div class="func" id="divide">/</div>
-				<div class="func" id="mult">*</div>
-				<div class="func" id="clear">CE</div>
-			</div>
-
-		</div>
-	</body>
+    <div id="container">
+    	<div id="calculator">
+            <div class="row">
+                <div id='result'>0</div>
+            </div>
+            <div class="row">
+                <div class="num_1">1</div>
+                <div class="num_2">2</div>
+                <div class="num_3">3</div>
+                <div class="calc_add">+</div>
+            </div>
+            <div class="row">
+                <div class="num_4">4</div>
+                <div class="num_5">5</div>
+                <div class="num_6">6</div>
+                <div class="calc_subtract">-</div>
+            </div>
+            <div class="row">
+                <div class="num_7">7</div>
+                <div class="num_8">8</div>
+                <div class="num_9">9</div>
+                <div class="calc_multiply">*</div>
+            </div>
+            <div class="row">
+            	<div class="num_0">0</div>
+                <div class="calc_clear">C</div>
+                <div class="calc_equal">=</div>
+                <div class="calc_divide">/</div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
